<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.667"/>
    <TextView
            android:text="@string/sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSys" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="36sp"/>
    <TextView
            android:text="@string/mmhg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMmHg"
            app:layout_constraintTop_toBottomOf="@+id/tvSys" app:layout_constraintEnd_toEndOf="@+id/tvSys"
    />
    <TextView
            android:text="@string/dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDia" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMmHg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="36sp"/>
    <TextView
            android:text="@string/mmhg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMmHg2"
            app:layout_constraintTop_toBottomOf="@+id/tvDia"
            app:layout_constraintEnd_toEndOf="@+id/tvDia"
    />
    <TextView
            android:text="@string/pul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPul" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMmHg2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="36sp"/>
    <TextView
            android:text="@string/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvMin"
            app:layout_constraintTop_toBottomOf="@+id/tvPul"
            app:layout_constraintEnd_toEndOf="@+id/tvPul"
    />
    <EditText
            android:hint="@string/sysHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/etSys"
            app:layout_constraintTop_toTopOf="@+id/tvSys" android:textSize="45sp" android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/tvDia" android:layout_marginStart="60dp"
            android:fontFamily="@font/roboto_mono_bold"/>
    <EditText
            android:hint="@string/diaHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/etDia"
            app:layout_constraintTop_toTopOf="@+id/tvDia" android:textAlignment="center" android:textSize="45sp"
            app:layout_constraintStart_toEndOf="@+id/tvDia" android:layout_marginStart="60dp"
            android:fontFamily="@font/roboto_mono_bold"/>
    <EditText
            android:hint="@string/pulsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/etPul"
            app:layout_constraintTop_toTopOf="@+id/tvPul" android:textSize="45sp" android:textAlignment="center"
            android:layout_marginStart="60dp" app:layout_constraintStart_toEndOf="@+id/tvDia"
            android:fontFamily="@font/roboto_mono_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>